@@ -56,9 +56,8 @@
       <classes>
         <class name="MyTester\Bridges\NetteRobotLoader\TestSuitesFinder" filename="Bridges/NetteRobotLoader/TestSuitesFinder.php" line-rate="94" branch-rate="0" complexity="0">
           <methods>
-            <method name="getSuites" signature="" line-rate="94" branch-rate="0">
+            <method name="getSuites" signature="" line-rate="93" branch-rate="0">
               <lines>
-                <line number="18" hits="1"/>
                 <line number="19" hits="0"/>
                 <line number="21" hits="1"/>
                 <line number="22" hits="1"/>
